[project]
name = "new-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.14",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "streamlit>=1.59.2",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
]
